membuat nav_menu.xml untuk ditempatkan di menu profile

--- a/program/app/src/main/AndroidManifest.xml
+++ b/program/app/src/main/AndroidManifest.xml
@@ -17,11 +17,19 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-    </application>
 
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Base.Theme.MainActivity">
+
+            <!-- Meta-data untuk Navigation Drawer -->
+            <meta-data
+                android:name="android.app.lib.name"
+                android:value="" />
+
+        </activity>
+    </application>
 </manifest>
