membuat event backpressed ketika membuka menu 2-3 ketika klik back pada hp akan kembali ke menu1(home)

--- a/program/app/src/main/AndroidManifest.xml
+++ b/program/app/src/main/AndroidManifest.xml
@@ -22,14 +22,6 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/Base.Theme.MainActivity">
-
-            <!-- Meta-data untuk Navigation Drawer -->
-            <meta-data
-                android:name="android.app.lib.name"
-                android:value="" />
-
-        </activity>
+            android:name=".MainActivity"/>
     </application>
 </manifest>
