--- a/program/app/src/main/AndroidManifest.xml
+++ b/program/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
         android:theme="@style/Theme.Tipala"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".menu_login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <activity
+            android:name=".MainActivity"/>
+    </application>
 </manifest>
