--- a/program/app/src/main/AndroidManifest.xml
+++ b/program/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -12,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tipala"
         tools:targetApi="31">
+
         <activity
             android:name=".menu_login"
             android:exported="true">
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity"/>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".DetailActivity"/>
     </application>
 </manifest>
